FIX whitespace

--- a/style.less
+++ b/style.less
@@ -40,7 +40,7 @@ a:hover {
 article {
     background: #fff;
     padding: 10px;
-    margin: 0 0 1px 0;
+    margin: 0;
 
     h2:first-child {
         font-size: 150%;
@@ -312,9 +312,10 @@ h2 a:focus {
     }
 
     article {
-        padding: 10px 40px 20px;  
+        padding: 40px 60px;  
         border: 0px solid #eee;
         border-right-width: 60px;
+        border-bottom-width: 1px;
     }
  
     #header {
